@@ -36,6 +36,8 @@ Version 0.7.5 UNRELEASED
 
   * Print useful message when package lists are out of date (Closes: #758764)
 
+  * [curses] Allow to hide bottom half in several screens (Closes: #453853)
+
 - Internal changes:
 
   * Change APT::Changelogs::Server (src/apt_options.cc) from
